kyverno-networkpolicy-training/code/cilium/calico-gnp.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.tenant-a-isolation   # Präfix = Tier-Name (ältere Calico-Versionen)
spec:
  tier: platform
  order: 10                    # kleiner = früher geprüft
  namespaceSelector: tenant == 'a'
  types:
  - Ingress
  ingress:
  - action: Deny
    source:
      namespaceSelector: has(tenant) && tenant != 'a'
  - action: Pass               # Rest: weiter zum nächsten Tier (NetworkPolicies)
