kyverno-networkpolicy-training/code/cilium/ccnp-metadata-deny.yaml
# Tag 5, Drill 3: Cloud-Metadaten (169.254.169.254) für alle Pods sperren
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-cloud-metadata
spec:
  endpointSelector: {}         # alle Pods im Cluster
  enableDefaultDeny:
    egress: false
  egressDeny:
  - toCIDR:
    - 169.254.169.254/32
